# solutiontesttask

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: settings.py  urls.py
items/: admin.py  models.py  urls.py  views.py
items/migrations/: 0001_initial.py
templates/: item_detail.html  list.html
