[tool.poetry]
name = "solutiontesttask"
version = "0.1.0"
description = ""
authors = ["Hemenbindi"]
license = "free"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
environs = "^9.5.0"
psycopg2 = "^2.9.5"
stripe = "^5.2.0"

[tool.poetry.group.dev.dependencies]
Django = "^4.1.7"
django-restframework = "^0.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
